NDT: Fix deprecation